--- a/reports/2021-01.html
+++ b/reports/2021-01.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2021 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>January 2021 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,95 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created January 31, 2021</div>
+<h1>Foundation: Tackling Lightning Network Optimization with Quantum Computing</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Foundation ResearchCompany establishment</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Company establishment marked the beginning of our journey to solve Lightning Network optimization challenges using quantum computing. We initiated the theoretical formulation of LN-QUBO v0.1, focusing on transforming LN's routing problem into a Quadratic Unconstrained Binary Optimization (QUBO) format that quantum annealers can process. The core research team was assembled, consisting of one quantum physicist specializing in quantum annealing algorithms and one LND engineer with deep expertise in Lightning Network architecture. Simultaneously, we secured cloud access to D-Wave Advantage 4.1 (5000+ Qubits, 15-way connectivity) through AWS Braket, enabling us to begin experimental work on quantum optimization of network routing problems.
 
-        <header>
-            <div class="report-date">Created January 31, 2021</div>
-            <h1>Foundation: Tackling Lightning Network Optimization with Quantum Computing</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Foundation Research</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Company established. Started theoretical formulation of LN-QUBO (v0.1). Core team hired (quantum physicist x1, LND engineer x1).</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Angel round by founders. Core team hired (quantum physicist x1, LND engineer x1).</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">AWS Braket (Advantage 4.1) contract</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">LN growing pains became apparent</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+基礎研究Company establishment
+
+[Translation needed: LN-QUBOの理論的定式化（v0.1）に着手]
+
+
+LN-QUBOのTheoretical formulation（v0.1）にInitiated
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>LN-QUBOのTheoretical formulation（v0.1）Initiated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">The founding team conducted an angel round to secure initial funding for research infrastructure and team building. We established our first office and began building the R&amp;D infrastructure necessary for quantum computing research. The core team hiring process focused on bringing together experts in quantum physics and distributed ledger technology, creating a unique interdisciplinary research group dedicated to solving LN's optimization challenges through quantum approaches.
+
+Additional Business Details:
+LN-QUBOの理論的定式化（v0
+
+Foundersによるエンジェルラウンド
+
+
+FoundersによるAngel round
+
+<p><strong>Additional Business Details:</strong></p>
+<p>By foundersAngel round</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">AWS Braket (Advantage 4.1) contract
+
+Hardware Specifications:
+AWS Braket (Advantage 4.1) 契約 8
+
+Hardware Specifications:
+[Translation needed: AWS Braket (Advantage 4.1) 契約 8]
+
+Hardware Specifications:
+コアチーム（量子物理学者x1, LNDエンジニアx1）Adoption [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Core team（Quantum physicistx1, LND engineerx1）Hired</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">The Lightning Network was experiencing significant growing pains as it transitioned from experimental to practical infrastructure. Users were facing daily routing failures, and the network's complexity was growing exponentially with each new node. This created a clear market need for advanced optimization solutions that could handle the NP-hard nature of multi-objective routing problems.
+
+Additional Market Information:
+LN成長痛が顕在化 3
+
+[Translation needed: LN成長痛が顕在化 3]
+
+
+AWS Braket (Advantage 4.1) Contract 8LNGrowing painsがBecame apparent 3
+
+<p><strong>Additional Market Information:</strong></p>
+<p>AWS Braket (Advantage 4.1) Contract 8LN's growing pains became apparent 3</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
