--- a/reports/2021-02.html
+++ b/reports/2021-02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2021 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>February 2021 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,83 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created February 28, 2021</div>
+<h1>R&amp;D Update: Establishing Mathematical Foundation of LN-QUBO v0.1</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Foundation ResearchLN-QUBO v0.1（Fees・ホップ数）のMathematical modelDefined OfficeContract R&amp;D infrastructureConstruction Advantage 4.1 8Bitcoin price reached all-time high</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">We completed the mathematical foundation of LN-QUBO v0.1, defining the initial cost function that focused on two primary objectives: fee minimization and hop count reduction. The mathematical model was designed to encode LN routing decisions as binary variables in a QUBO matrix, where each potential path through the network could be represented as a binary choice (use path or not). This foundational work established the framework for all future model iterations.
 
-        <header>
-            <div class="report-date">Created February 28, 2021</div>
-            <h1>R&D Update: Establishing Mathematical Foundation of LN-QUBO v0.1</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Foundation Research</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Defined mathematical model of LN-QUBO v0.1 (fees & hop count).</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Office contract. R&D infrastructure construction.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Bitcoin price reached all-time high range.</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+基礎研究LN-QUBO v0
+
+
+I. Foundation ResearchLN-QUBO v0.1（手数料・ホップ数）のMathematical modelを定義 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Foundation ResearchLN-QUBO v0.1（Fees・ホップ数）のMathematical modelDefined</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Office space was secured and R&amp;D infrastructure construction began. We set up computational resources for quantum annealing experiments and established development environments for Lightning Network simulation. The team began preparing initial pitch materials for seed round fundraising, focusing on the unique value proposition of quantum-accelerated network optimization.
+
+Additional Business Details:
+1（手数料・ホップ数）の数学モデルを定義
+
+
+OfficeContract</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1 8
+
+Hardware Specifications:
+Advantage 4.1 8BitcoinPriceがAll-time high圏へ [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>R&amp;D infrastructureConstruction</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Bitcoin reached all-time high price levels, driving increased interest in Layer 2 scaling solutions. The market recognized the critical importance of efficient payment routing as transaction volumes grew, creating favorable conditions for research into advanced optimization techniques.
+
+Additional Market Information:
+R&amp;Dインフラ構築
+
+
+Advantage 4.1 8BitcoinPriceがAll-time high圏へ [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Market Information:</strong></p>
+<p>Advantage 4.1 8Bitcoin price reached all-time high</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
