--- a/reports/2021-03.html
+++ b/reports/2021-03.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>March 2021 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>March 2021 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,64 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created March 31, 2021</div>
+<h1>Infrastructure: Cloud Access to D-Wave Advantage and Initial Testing Complete</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Foundation ResearchD-Wave Leap cloud serviceへのInitial accessとテスト For seed roundPitch deckv1Created Advantage 4.1</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Initial access to D-Wave Leap cloud service was secured and testing began. We conducted preliminary experiments to understand the performance characteristics of Advantage 4.1 for our specific optimization problems. These early tests helped us understand the embedding challenges and computational requirements for solving LN routing problems on quantum hardware.
 
-        <header>
-            <div class="report-date">Created March 31, 2021</div>
-            <h1>Infrastructure: Cloud Access to D-Wave Advantage and Initial Testing Complete</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Foundation Research</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Initial access and testing of D-Wave Leap cloud service.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Created pitch deck v1 for seed round.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+基礎研究D-Wave Leapクラウドサービスへの初期アクセスとテスト
+
+
+I. Foundation ResearchD-Wave Leapクラウドサービスへの初期AccessとTest [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Foundation ResearchD-Wave Leap cloud serviceへのInitial accessとテスト</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Version 1 of the pitch deck for seed round fundraising was created. The deck emphasized our unique approach of combining quantum computing with Lightning Network optimization, highlighting the potential for breakthrough improvements in routing efficiency and network performance.
+
+Additional Business Details:
+Seedラウンド向けピッチデックv1作成
+
+
+Seedラウンド向けピッチデックv1作成 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>For seed roundPitch deckv1Created</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+I. Foundation ResearchD-Wave Leapクラウドサービスへの初期AccessとTest [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
