--- a/reports/2021-11.html
+++ b/reports/2021-11.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>November 2021 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>November 2021 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,85 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created November 30, 2021</div>
+<h1>Business Milestones：Taproot の追い風を受け、シードラウンド($3M)をクローズ</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Foundation Researchv0.2の基礎研究Completed シードラウンド($3M)Closed R&amp;Dチームを5名にStrengthening Advantage 4.1TaprootアップグレードSuccess 11</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Foundation research for v0.2 was completed, establishing the mathematical framework for liquidity-constrained routing optimization. The model now incorporated channel capacity as a hard constraint, preventing routing attempts that would fail due to insufficient liquidity.
 
-        <header>
-            <div class="report-date">Created November 30, 2021</div>
-            <h1>Business Milestones：Taproot の追い風を受け、シードラウンド($3M)をクローズ</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Foundation Research</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Foundation research of v0.2 completed.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Seed round ($3M) closed. R&D team expanded to 5 members.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Taproot upgrade successful</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+基礎研究v0
+
+
+I. Foundation Researchv0.2の基礎Research完了 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Foundation Researchv0.2の基礎研究Completed</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">The seed round of $3M was successfully closed, providing critical funding for research expansion. The R&amp;D team was expanded from 2 to 5 members, adding additional quantum computing and blockchain expertise. This funding milestone enabled us to accelerate research and begin planning for larger-scale simulations.
+
+Additional Business Details:
+2の基礎研究完了
+
+
+Seedラウンド($3M)Closed
+
+<p><strong>Additional Business Details:</strong></p>
+<p>シードラウンド($3M)Closed</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1Taprootアップグレード成功 11 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>R&amp;Dチームを5名にStrengthening</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Bitcoin's Taproot upgrade was successfully activated, providing a strong foundation for future Lightning Network enhancements. This upgrade created optimism about LN's future capabilities and validated our research focus.
+
+Additional Market Information:
+Taprootアップグレード成功 11
+
+[Translation needed: Taprootアップグレード成功 11]
+
+
+Advantage 4.1Taprootアップグレード成功 11 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Market Information:</strong></p>
+<p>Advantage 4.1TaprootアップグレードSuccess 11</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
