--- a/reports/2021-12.html
+++ b/reports/2021-12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>December 2021 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>December 2021 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,67 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created December 31, 2021</div>
+<h1>2021 Summary and 2022 Roadmap: From Theory to Large-Scale Simulation</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Foundation Research2022年 R&amp;DRoadmap策定 Hired活動Full-scale（量子エンジニアx1） Advantage 4.1--- 2022年 (Y2): モデルの高度化とベンチマーク ---</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">The 2022 R&amp;D roadmap was formulated, outlining our path from theoretical research to large-scale simulation. The plan included expanding simulation capabilities to 10,000 nodes, implementing hybrid quantum-classical solvers, and developing more sophisticated optimization models.
 
-        <header>
-            <div class="report-date">Created December 31, 2021</div>
-            <h1>2021 Summary and 2022 Roadmap: From Theory to Large-Scale Simulation</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Foundation Research</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">2022 R&D roadmap formulated.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Recruitment activities intensified (quantum engineer x1).</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+基礎研究2022年 R&amp;Dロードマップ策定
+
+
+Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Foundation Research2022年 R&amp;DRoadmap策定</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Recruitment activities intensified as we sought to hire an additional quantum engineer. The expanded team would enable parallel research tracks and faster iteration on model improvements. We also began planning for academic publication of our early research results.
+
+Additional Business Details:
+採用活動本格化（量子エンジニアx1）
+
+
+Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Hired活動Full-scale（量子エンジニアx1）</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1--- 2022年 (Y2): モデルの高度化とベンチマーク ---</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
