--- a/reports/2022-01.html
+++ b/reports/2022-01.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>January 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,64 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created January 31, 2022</div>
+<h1>2022 Kickoff: Implementation Start of LN-QUBO v0.2 (Liquidity Constraints)</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model EnhancementLN-QUBO v0.2（Liquidity constraints）のImplementationInitiated 2022年キックオフ コーポレートサイトv1ローンチ Advantage 4.1</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Implementation of LN-QUBO v0.2 with liquidity constraints began. This version introduced capacity constraints as penalty terms in the QUBO matrix, ensuring that routing solutions respect channel liquidity limits. The implementation required careful mathematical modeling to balance multiple objectives: fee minimization, hop count, and liquidity constraints.
 
-        <header>
-            <div class="report-date">Created January 31, 2022</div>
-            <h1>2022 Kickoff: Implementation Start of LN-QUBO v0.2 (Liquidity Constraints)</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">LN-QUBO v0.2（流動性制約）の実装に着手。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">2022年キックオフ。コーポレートサイトv1ローンチ。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化LN-QUBO v0
+
+
+I. Model EnhancementLN-QUBO v0.2（流動性制約）のImplementationにInitiated [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model EnhancementLN-QUBO v0.2（Liquidity constraints）のImplementationInitiated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+                P22 kickoff meeting was held to align the team on annual goals. The corporate website v1 was launched, providing public visibility into our research mission and progress. This marked our transition from stealth research to more public engagement with the Lightning Network community.</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Additional Business Details:
+2（流動性制約）の実装に着手
+
+Hardware Specifications:
+2022年キックオフ
+
+コーポレートサイトv1Launch
+
+Hardware Specifications:
+Advantage 4.1
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>コーポレートサイトv1ローンチ</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
 </body>
 </html>
