--- a/reports/2022-02.html
+++ b/reports/2022-02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>February 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,45 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created February 28, 2022</div>
+<h1>R&amp;D Update: Introduction and Evaluation of D-Wave Hybrid Solver</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model EnhancementD-WaveHybrid solver 23 のUtilizedConsiderationStarted Advantage 4.1 (Hybrid)</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Evaluation of D-Wave's hybrid solver began. Hybrid solvers combine quantum and classical computing approaches, allowing us to tackle larger problem instances than pure quantum annealing alone. We began testing hybrid approaches to determine optimal problem decomposition strategies for LN routing optimization.
 
-        <header>
-            <div class="report-date">Created February 28, 2022</div>
-            <h1>R&D Update: Introduction and Evaluation of D-Wave Hybrid Solver</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">D-Waveハイブリッドソルバーの活用検討開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+
+I. Model EnhancementD-Waveハイブリッドソルバー 23 の活用検討Started [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model EnhancementD-WaveHybrid solver 23 のUtilizedConsiderationStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
+
+Hardware Specifications:
+I. Model EnhancementD-Waveハイブリッドソルバー 23 の活用検討Started [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
