--- a/reports/2022-04.html
+++ b/reports/2022-04.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>April 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>April 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,69 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created April 30, 2022</div>
+<h1>Simulation Start: Stress Test of v0.2 Model on 10,000-Node Network</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model Enhancement10,000ノードでのv0.2SimulationStarted Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Announcement 11</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Simulation testing of v0.2 model began on 10,000-node networks. These large-scale stress tests were designed to evaluate model performance under realistic network conditions, including varying payment sizes, network congestion scenarios, and channel liquidity distributions. The tests provided critical data on scalability and optimization quality.
 
-        <header>
-            <div class="report-date">Created April 30, 2022</div>
-            <h1>Simulation Start: Stress Test of v0.2 Model on 10,000-Node Network</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">10,000ノードでのv0.2シミュレーション開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Taroプロトコル（現Taproot Assets）発表</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化10,000ノードでのv0
+
+
+I. Model Enhancement10,000ノードでのv0.2シミュレーションStarted
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model Enhancement10,000ノードでのv0.2SimulationStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)Taroプロトコル（現
+
+Hardware Specifications:
+[Translation needed: Advantage 4.1 (Hybrid)Taroプロトコル（現]
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Presented 11 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">The Taro protocol (now Taproot Assets) was announced, signaling future expansion of Lightning Network capabilities to support multiple asset types, which would increase routing complexity.
+
+Additional Market Information:
+Taproot Assets）発表 11
+
+[Translation needed: Taproot Assets）発表 11]
+
+
+Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Presented 11 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
