--- a/reports/2022-06.html
+++ b/reports/2022-06.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>June 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>June 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,67 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created June 30, 2022</div>
+<h1>R&amp;D Plan: Design Start of LN-QUBO v1.0 (Reliability &amp; Rebalancing Terms)</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model EnhancementLN-QUBO v1.0（Reliability・Rebalancing term）のDesignInitiated アーリーアドバイザーとして著名なLSPオペレーターとContract Advantage 4.1 (Hybrid)</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Design work began on LN-QUBO v1.0, which would introduce two critical new components: reliability scoring and rebalancing terms. The reliability component would incorporate node uptime, channel age, and historical jamming data to predict routing success probability. The rebalancing term represented a major innovation, optimizing not just for successful payment routing but also for improving long-term node liquidity balance.
 
-        <header>
-            <div class="report-date">Created June 30, 2022</div>
-            <h1>R&D Plan: Design Start of LN-QUBO v1.0 (Reliability & Rebalancing Terms)</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">LN-QUBO v1.0（信頼性・リバランス項）の設計に着手。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Established advisory relationship with renowned LSP operator.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化LN-QUBO v1
+
+
+I. Model EnhancementLN-QUBO v1.0（信頼性・リバランス項）のDesignにInitiated [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model EnhancementLN-QUBO v1.0（Reliability・Rebalancing term）のDesignInitiated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">An early advisor relationship was established with a renowned LSP operator, providing valuable real-world insights into Lightning Network operations and routing challenges. This partnership helped ground our theoretical research in practical network realities.
+
+Additional Business Details:
+0（信頼性・リバランス項）の設計に着手
+
+
+Advantage 4.1 (Hybrid)
+
+<p><strong>Additional Business Details:</strong></p>
+<p>アーリーアドバイザーとして著名なLSPオペレーターとContract</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
+
+Hardware Specifications:
+アーリーアドバイザーとして著名なLSPオペレーターと契約
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
