--- a/reports/2022-08.html
+++ b/reports/2022-08.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>August 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>August 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,80 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created August 31, 2022</div>
+<h1>R&amp;D Update: Implementation and Debugging of v1.0 Model</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model Enhancementv1.0のImplementationInitiated IEEE Blockchain 2022 24 等のConferencePreparation Advantage 4.1 (Hybrid)LN学術研究が活発化 24</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Implementation of v1.0 model began, incorporating the reliability and rebalancing components. This required significant development effort to integrate multiple optimization objectives into a single QUBO formulation. Debugging and optimization of the implementation process was ongoing throughout the month.
 
-        <header>
-            <div class="report-date">Created August 31, 2022</div>
-            <h1>R&D Update: Implementation and Debugging of v1.0 Model</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">v1.0の実装に着手。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">IEEE Blockchain 2022 等の学会準備。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">LN学術研究が活発化</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化v1
+
+
+I. Model Enhancementv1.0のImplementationにInitiated
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model Enhancementv1.0のImplementationInitiated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Preparation for IEEE Blockchain 2022 conference began. We planned to present our v0.2 research results, establishing our technical credibility in the academic blockchain research community.
+
+Additional Business Details:
+0の実装に着手
+
+
+Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>IEEE Blockchain 2022 24 等のConferencePreparation</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
+
+Hardware Specifications:
+IEEE Blockchain 2022 24 等の学会準備
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1 (Hybrid)LN学術研究が活発化 24</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Lightning Network academic research was becoming more active, with multiple research groups publishing papers on routing optimization and network analysis.
+
+
+Advantage 4</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
