--- a/reports/2022-09.html
+++ b/reports/2022-09.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>September 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>September 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,70 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created September 30, 2022</div>
+<h1>Academic Achievement: Presentation of v0.2 Research Results at IEEE Blockchain 2022</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model Enhancementv1.0ImplementationCompleted Conferenceにてv0.2の研究ResultsをAnnouncement Technical credibilityをGained Advantage 4.1 (Hybrid)</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Implementation of v1.0 was completed. The full-featured model now incorporated fee optimization, hop count minimization, liquidity constraints, reliability scoring, and rebalancing optimization in a unified QUBO formulation.
 
-        <header>
-            <div class="report-date">Created September 30, 2022</div>
-            <h1>Academic Achievement: Presentation of v0.2 Research Results at IEEE Blockchain 2022</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">v1.0実装完了。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">学会にてv0.2の研究成果を発表。技術的信頼を獲得。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化v1
+
+
+I. Model Enhancementv1.0Implementation完了 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model Enhancementv1.0ImplementationCompleted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Research results from v0.2 were presented at IEEE Blockchain 2022, establishing technical credibility and gaining recognition in the academic community. The presentation highlighted our unique quantum-accelerated approach to routing optimization.
+
+Additional Business Details:
+0実装完了
+
+
+技術的信頼を獲得 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Conferenceにてv0.2の研究ResultsをAnnouncement</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
+
+Hardware Specifications:
+学会にてv0
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Technical credibilityをGained</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
