--- a/reports/2022-12.html
+++ b/reports/2022-12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>December 2022 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>December 2022 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,48 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created December 31, 2022</div>
+<h1>2022 Summary: Theoretical Superiority of Quantum Hybrid Approach Demonstrated</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Model Enhancement2022年Summary Benchmark resultsをWhite paperとしてPublished Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代とStrategy的ピボット ---</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+                P22 year-end summary was completed. Benchmark results were published as a white paper, making our research findings publicly available. The paper documented the theoretical superiority of our quantum hybrid approach, providing detailed analysis of performance improvements and optimization quality.</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1 (Hybrid)
 
-        <header>
-            <div class="report-date">Created December 31, 2022</div>
-            <h1>2022 Summary: Theoretical Superiority of Quantum Hybrid Approach Demonstrated</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Model Enhancement</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">2022年総括。ベンチマーク結果をホワイトペーパーとして公開。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1 (Hybrid)</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+モデル高度化2022年総括
+
+Benchmark結果をホワイトペーパーとしてPublished [Note: Some Japanese text may need manual translation]
+
+Hardware Specifications:
+Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代と戦略的ピボット --- [Note: Some Japanese text may need manual translation]
+
+Additional Technical Details:
+I. Model Enhancement2022年Summary
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代とStrategy的ピボット ---</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
 </body>
 </html>
