--- a/reports/2023-02.html
+++ b/reports/2023-02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>February 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,82 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created February 28, 2023</div>
+<h1>Market Analysis: Impact of VC Winter and Series A Strategy Review</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. Benchmarkv1.0モデルのParameters・Tuning VCからのResponseがSluggish、StrategyのReviewをForced Advantage 4.1NostrがLN普及を牽引 37</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Parameter tuning of the v1.0 model continued, optimizing the weights of different cost function components to achieve the best balance between fee minimization, reliability, and rebalancing objectives. This fine-tuning process required extensive simulation testing and iterative refinement.
 
-        <header>
-            <div class="report-date">Created February 28, 2023</div>
-            <h1>Market Analysis: Impact of VC Winter and Series A Strategy Review</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Benchmark</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">v1.0モデルのパラメータ・チューニング。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">VCからの反応が鈍く、戦略の見直しを迫られる。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">NostrがLN普及を牽引</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+Benchmarkv1
+
+
+I. Benchmarkv1.0モデルのパラメータ・チューニング
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Benchmarkv1.0モデルのParameters・Tuning</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">VC responses to our Series A outreach were tepid, forcing a strategic review. The 'Web3' and 'blockchain' labels were creating resistance among investors who had become skeptical of the sector following market downturns. We recognized the need to reframe our narrative.
+
+Additional Business Details:
+0モデルのパラメータ・チューニング
+
+
+VCからの反応が鈍く、戦略の見直しを迫られる [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>VCからのResponseがSluggish、StrategyのReviewをForced</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+VCからの反応が鈍く、戦略の見直しを迫られる
+
+Hardware Specifications:
+Advantage 4.1NostrがLN普及を牽引 37 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Nostr protocol was driving Lightning Network adoption, creating new use cases and increasing network activity. This growth validated the importance of efficient routing solutions.
+
+Additional Market Information:
+Advantage 4
+
+[Translation needed: NostrがLN普及を牽引 37]
+
+
+Advantage 4.1NostrがLN普及を牽引 37 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
