--- a/reports/2023-03.html
+++ b/reports/2023-03.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>March 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>March 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,54 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created March 31, 2023</div>
+<h1>Strategic Focus: We Are a 'Quantum AI' Company</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic Pivot市場Analysis：VCは「AI」にのみInvestmentしていることをConfirmed 28 Strategy的Pivot decision Pitch deckを「量子AI」ベースにComplete revision Advantage 4.1</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Strategic pivot was executed: we repositioned from a 'blockchain company' to a 'quantum AI optimization engine company for decentralized financial infrastructure.' The pitch deck was completely revised with a 'quantum AI' focus, emphasizing the AI/ML aspects of our optimization technology rather than blockchain infrastructure.
 
-        <header>
-            <div class="report-date">Created March 31, 2023</div>
-            <h1>Strategic Focus: We Are a 'Quantum AI' Company</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">市場分析：VCは「AI」にのみ投資していることを確認。戦略的ピボット決定。ピッチデックを「量子AI」ベースに全面改訂。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+戦略的ピボット決定
+
+
+II. Strategic Pivot市場Analysis：VCは「AI」にのみ投資していることを確認 28 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Strategy的Pivot decision</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+ピッチデックを「量子AI」ベースに全面改訂
+
+Hardware Specifications:
+Advantage 4.1
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Pitch deckを「量子AI」ベースにComplete revision</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
