--- a/reports/2023-04.html
+++ b/reports/2023-04.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>April 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>April 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,64 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created April 30, 2023</div>
+<h1>R&amp;D Update: Analysis of BRC-20 Congestion Data and Fee Optimization Model Enhancement</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic PivotBRC-20によるオンチェーンCongestionDataをCollection・Analysis 「AIによる金融インフラ最適化」のNarrativeでVCApproachをResumed Advantage 4.1</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">BRC-20 token congestion data was collected and analyzed. The massive on-chain fee spikes caused by BRC-20 token minting created a clear demonstration of Bitcoin's scalability limitations and the absolute necessity of Layer 2 solutions like Lightning Network. This data was incorporated into our fee optimization model to better handle high-fee scenarios.
 
-        <header>
-            <div class="report-date">Created April 30, 2023</div>
-            <h1>R&D Update: Analysis of BRC-20 Congestion Data and Fee Optimization Model Enhancement</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">BRC-20によるオンチェーン混雑データを収集・分析。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+戦略的ピボットBRC-20によるオンチェーン混雑データを収集・分析
+
+
+「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>II. Strategic PivotBRC-20によるオンチェーンCongestionDataをCollection・Analysis</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">With the new 'AI for financial infrastructure optimization' narrative, VC outreach was resumed. The BRC-20 congestion provided a concrete example of market need for our optimization solutions, strengthening our pitch to AI-focused investors.
+
+Additional Business Details:
+「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開
+
+
+「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>「AIによる金融インフラ最適化」のNarrativeでVCApproachをResumed</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
