--- a/reports/2023-05.html
+++ b/reports/2023-05.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>May 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>May 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,66 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created May 31, 2023</div>
+<h1>Market Insight: BRC-20 Congestion Proved the Necessity of Our 'Optimization Engine'</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic PivotBRC-20のCongestionを「我々のソリューションの必要性」として資料にIncorporated 12 AIInvestment家からの関心GainedにSuccess Advantage 4.1BRC-20によるオンチェーンCongestionがピーク 12</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Successfully gained interest from AI investors who saw the connection between quantum optimization and AI/ML applications. The strategic pivot was proving effective, opening doors that had been closed when we positioned as a blockchain company.
 
-        <header>
-            <div class="report-date">Created May 31, 2023</div>
-            <h1>Market Insight: BRC-20 Congestion Proved the Necessity of Our 'Optimization Engine'</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">BRC-20の混雑を「我々のソリューションの必要性」として資料に組み込む。AI投資家からの関心獲得に成功。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">BRC-20によるオンチェーン混雑がピーク</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+AI投資家からの関心獲得に成功
+
+
+Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
+
+<p><strong>Additional Business Details:</strong></p>
+<p>AIInvestment家からの関心GainedにSuccess</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1BRC-20によるオンチェーンCongestionがピーク 12</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">BRC-20 on-chain congestion reached its peak, creating maximum visibility for Bitcoin scalability challenges and Layer 2 solutions.
+
+Additional Market Information:
+BRC-20によるオンチェーン混雑がピーク 12
+
+[Translation needed: BRC-20によるオンチェーン混雑がピーク 12]
+
+
+II. Strategic PivotBRC-20のCongestionを「我々のソリューションの必要性」として資料に組み込む 12 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
