--- a/reports/2023-06.html
+++ b/reports/2023-06.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>June 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>June 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,64 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created June 30, 2023</div>
+<h1>Market Opportunity: Emergence of Taproot Assets (Taro) and Multi-Asset Routing Challenges</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic PivotTaproot Assets (Taro) 12 のTechnical specificationsのAnalysisStarted シリーズAのNegotiationがConcretized Advantage 4.1</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Technical specification analysis of Taproot Assets (formerly Taro) began. This protocol would enable issuance of multiple asset types on Lightning Network, fundamentally changing routing complexity. Our optimization models would need to handle multi-asset routing, requiring significant model extensions.
 
-        <header>
-            <div class="report-date">Created June 30, 2023</div>
-            <h1>Market Opportunity: Emergence of Taproot Assets (Taro) and Multi-Asset Routing Challenges</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Taproot Assets (Taro) の技術仕様の分析開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">シリーズAの交渉が具体化。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+戦略的ピボットTaproot Assets (Taro) 12 の技術仕様の分析開始
+
+
+シリーズAのNegotiationが具体化 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>II. Strategic PivotTaproot Assets (Taro) 12 のTechnical specificationsのAnalysisStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Series A negotiations became more concrete. The combination of AI positioning, clear market need (demonstrated by BRC-20), and future market opportunity (Taproot Assets) created a compelling investment thesis.
+
+Additional Business Details:
+シリーズAの交渉が具体化
+
+
+Advantage 4.1
+
+<p><strong>Additional Business Details:</strong></p>
+<p>シリーズAのNegotiationがConcretized</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
