--- a/reports/2023-10.html
+++ b/reports/2023-10.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>October 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>October 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,82 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created October 31, 2023</div>
+<h1>Business Milestones：シリーズA ($15M) クローズ &amp; Taproot Assets への対応開始</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic Pivotv1.5のSimulationEnvironmentへのImplementationInitiated シリーズA ($15M) Closed Advantage 4.1Taproot Assets メインネット対応 26</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Implementation of v1.5 in the simulation environment began. The multi-asset routing model required significant development work to handle the increased complexity of routing decisions across multiple asset types.
 
-        <header>
-            <div class="report-date">Created October 31, 2023</div>
-            <h1>Business Milestones：シリーズA ($15M) クローズ & Taproot Assets への対応開始</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">v1.5のシミュレーション環境への実装に着手。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">シリーズA ($15M) クローズ。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Taproot Assets メインネット対応</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+戦略的ピボットv1
+
+
+II. Strategic Pivotv1.5のシミュレーション環境へのImplementationにInitiated [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>II. Strategic Pivotv1.5のSimulationEnvironmentへのImplementationInitiated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Series A round of $15M was successfully closed. This major funding milestone provided resources to accelerate research, expand the team, and begin planning for alpha testing with real network partners. Simultaneously, we began preparing for Taproot Assets support, recognizing it as a critical future capability.
+
+Additional Business Details:
+5のシミュレーション環境への実装に着手
+
+
+Advantage 4.1Taproot Assets メインネットResponse 26
+
+<p><strong>Additional Business Details:</strong></p>
+<p>シリーズA ($15M) Closed</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1Taproot Assets メインネットResponse 26
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1Taproot Assets メインネット対応 26</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Taproot Assets mainnet support was released, marking the beginning of multi-asset Lightning Network capabilities. This validated our v1.5 research direction and created immediate market need for multi-asset routing optimization.
+
+Additional Market Information:
+Taproot Assets メインネット対応 26
+
+[Translation needed: Taproot Assets メインネット対応 26]
+
+
+Advantage 4.1Taproot Assets メインネットResponse 26</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
