--- a/reports/2023-12.html
+++ b/reports/2023-12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>December 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>December 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,51 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created December 31, 2023</div>
+<h1>2023 Summary and 2024 Roadmap: Successful Pivot Amid Headwinds, Moving to Alpha Test</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">II. Strategic Pivot2024年Roadmap（アルファテスト）策定 アルファパートナー候補（LSP/取引所）のリストアップ Advantage 4.1--- 2024年 (Y4): Advantage2プロトタイプとアルファテスト ---</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Alpha partner candidates (LSPs and exchanges) were identified and listed. We began initial outreach to potential research partners who could provide real network data and testing environments. The goal was to validate our models in production-like conditions without impacting live network operations.
 
-        <header>
-            <div class="report-date">Created December 31, 2023</div>
-            <h1>2023 Summary and 2024 Roadmap: Successful Pivot Amid Headwinds, Moving to Alpha Test</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">II. Strategic Pivot</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">2024年ロードマップ（アルファテスト）策定。アルファパートナー候補（LSP/取引所）のリストアップ。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+アルファPartners候補（LSP/取引所）のリストアップ
+
+
+II. Strategic Pivot2024年Roadmap（AlphaTest）Planning [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>アルファパートナー候補（LSP/取引所）のリストアップ</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1--- 2024年 (Y4): Advantage2PrototypeとAlphaTest --- [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1--- 2024年 (Y4): Advantage2プロトタイプとアルファテスト ---</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
