--- a/reports/2024-01.html
+++ b/reports/2024-01.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>January 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,61 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created January 31, 2024</div>
+<h1>R&amp;D Update: D-Wave Advantage2 Prototype Announcement and Our Strategy</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. PrototypeD-WaveがAdvantage2プロトタイプ（1200+Qubit）をAnnouncement 10 パートナーシップ担当者（Head of BD）Hired Advantage2 Proto 10</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">D-Wave announced the Advantage2 prototype (1200+ Qubits) with significantly reduced noise. This next-generation hardware represented a major advancement in quantum annealing capabilities. We immediately began evaluating how this hardware could accelerate our research and improve optimization performance.
 
-        <header>
-            <div class="report-date">Created January 31, 2024</div>
-            <h1>R&D Update: D-Wave Advantage2 Prototype Announcement and Our Strategy</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Prototype</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">D-WaveがAdvantage2プロトタイプ（1200+Qubit）を発表。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">パートナーシップ担当者（Head of BD）採用。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+
+III. PrototypeD-WaveがAdvantage2Prototype（1200+Qubit）をPresented 10
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>III. PrototypeD-WaveがAdvantage2プロトタイプ（1200+Qubit）をAnnouncement 10</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">A Head of Business Development (BD) was hired to lead partnership development efforts. This role was critical for establishing alpha test relationships with major LSPs and exchanges who could provide real network data for testing.
+
+
+Partnersシップ担当者（Head of Business Development）Adoption [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>パートナーシップ担当者（Head of BD）Hired</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+III. PrototypeD-WaveがAdvantage2Prototype（1200+Qubit）をPresented 10
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto 10</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
