--- a/reports/2024-02.html
+++ b/reports/2024-02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>February 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,58 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created February 28, 2024</div>
+<h1>Technical Milestones：Advantage2プロトタイプ への早期アクセス権を確保</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. PrototypeAdvantage2プロトタイプへのEarly access rightsをSecured アルファパートナー候補とのInitialNegotiationStarted Advantage2 Proto</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Early access rights to the Advantage2 prototype were secured. This gave us priority access to the new hardware, enabling us to begin migration work and performance testing ahead of general availability.
 
-        <header>
-            <div class="report-date">Created February 28, 2024</div>
-            <h1>Technical Milestones：Advantage2プロトタイプ への早期アクセス権を確保</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Prototype</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Advantage2プロトタイプへの早期アクセス権を確保。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">アルファパートナー候補との初期交渉開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+
+AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>III. PrototypeAdvantage2プロトタイプへのEarly access rightsをSecured</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Initial negotiations began with alpha partner candidates. We presented our research results and alpha test proposal, seeking partners who would provide anonymized real network data for shadow testing.
+
+
+AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>アルファパートナー候補とのInitialNegotiationStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+III. PrototypeAdvantage2Prototypeへの早期Access権を確保 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
