--- a/reports/2024-05.html
+++ b/reports/2024-05.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>May 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>May 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,51 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created May 31, 2024</div>
+<h1>Business Development: Negotiations with Major LSPs/Exchanges Started Based on 20x Speedup Data</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. PrototypeTime-to-SolutionがAdvantage 4.1比で20倍AccelerationすることをDemonstrated 10 このDataをWeaponに、LSP/取引所とのNegotiationをAcceleration Advantage2 Proto</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Negotiations with potential alpha partners intensified. The speedup data provided concrete evidence of our technology's practical viability, addressing concerns about quantum computing's applicability to real-time financial infrastructure.
 
-        <header>
-            <div class="report-date">Created May 31, 2024</div>
-            <h1>Business Development: Negotiations with Major LSPs/Exchanges Started Based on 20x Speedup Data</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Prototype</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">20倍高速化のデータを基に、LSP/取引所との交渉を開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+1比で20倍高速化することを実証 10
+
+
+Advantage2 Proto
+
+<p><strong>Additional Business Details:</strong></p>
+<p>このDataをWeaponに、LSP/取引所とのNegotiationをAcceleration</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+このデータを武器に、LSP/取引所との交渉を加速
+
+Hardware Specifications:
+III. PrototypeTime-to-SolutionがAdvantage 4.1比で20x高速化することを実証 10 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
