--- a/reports/2024-08.html
+++ b/reports/2024-08.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>August 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>August 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,66 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created August 31, 2024</div>
+<h1>Alpha Test Start: LN-QUBO Model Driven with Partner Real Data</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. Alpha TestingパートナーのAnonymizedリアルData 13 のReceivedとAnalysis Alpha versionAPI（v0.1）とDashboardをProvided Advantage2 ProtoLNの流動性問題が課題として認識 29</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Anonymized real network data was received from alpha partners and analyzed. This real data provided insights into actual network topologies, payment patterns, and routing challenges that differed from our simulation assumptions. An alpha version API (v0.1) and dashboard were provided to partners for testing and feedback.
 
-        <header>
-            <div class="report-date">Created August 31, 2024</div>
-            <h1>Alpha Test Start: LN-QUBO Model Driven with Partner Real Data</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Alpha Test</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">パートナーの匿名化リアルデータの受領と分析。アルファ版API（v0.1）とダッシュボードを提供。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">LNの流動性問題が課題として認識</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+アルファテストPartnersの匿名化リアルデータ 13 の受領と分析
+
+
+Alpha版API（v0.1）とダッシュボードを提供 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>III. Alpha TestingパートナーのAnonymizedリアルData 13 のReceivedとAnalysis</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+Advantage2 ProtoLN流動性問題がChallengeとしてRecognition 29 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 ProtoLNの流動性問題が課題として認識 29</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Liquidity management problems in Lightning Network were being recognized as critical challenges by node operators and LSPs, validating the importance of our optimization research.
+
+Additional Market Information:
+LN流動性問題が課題として認識 29
+
+[Translation needed: LN流動性問題が課題として認識 29]
+
+
+Advantage2 ProtoLN流動性問題がChallengeとしてRecognition 29 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
