--- a/reports/2024-09.html
+++ b/reports/2024-09.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>September 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>September 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,67 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created September 30, 2024</div>
+<h1>Alpha Test Progress: Shadow Test Started and Initial Performance Report</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. Alpha TestingリアルDataをLN-QUBO v1.5モデルに入力し、Shadow testStarted パートナーへのWeekly・ReportProvidedStarted Advantage2 Proto</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Real network data was input into the LN-QUBO v1.5 model, and shadow testing began. Shadow testing allowed us to run our optimization algorithms in parallel with existing routing systems, comparing performance without impacting live network operations. This approach provided safe validation of our approach in real-world conditions.
 
-        <header>
-            <div class="report-date">Created September 30, 2024</div>
-            <h1>Alpha Test Progress: Shadow Test Started and Initial Performance Report</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Alpha Test</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">リアルデータをLN-QUBO v1.5モデルに入力し、シャドウテスト開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">パートナーへのウィークリー・レポート提供開始。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+アルファテストリアルデータをLN-QUBO v1
+
+
+III. Alpha TestingリアルデータをLN-QUBO v1.5モデルに入力し、シャドウTestStarted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>III. Alpha TestingリアルDataをLN-QUBO v1.5モデルに入力し、Shadow testStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Weekly performance reports began being provided to alpha partners. These reports documented routing improvements, fee reductions, and other optimization metrics, building trust and demonstrating value to our research partners.
+
+Additional Business Details:
+5モデルに入力し、シャドウテスト開始
+
+
+III. Alpha TestingリアルデータをLN-QUBO v1.5モデルに入力し、シャドウTestStarted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>パートナーへのWeekly・ReportProvidedStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+Partnersへのウィークリー・レポート提供開始
+
+Hardware Specifications:
+Advantage2 Proto</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
