--- a/reports/2024-11.html
+++ b/reports/2024-11.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>November 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>November 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,52 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created November 30, 2024</div>
+<h1>R&amp;D Update: Fine-Tuning of v1.5 Model Based on Partner Feedback</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. Alpha TestingパートナーからのFeedbackに基づき、v1.5モデルをFine-tuning Advantage2 ProtoD-WaveがAdvantage2のBenchmark resultsをAnnouncement 38</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Fine-tuning of v1.5 model began based on partner feedback. Real-world testing revealed edge cases and optimization opportunities that required model adjustments. This iterative improvement process was essential for adapting our research to actual network conditions.
 
-        <header>
-            <div class="report-date">Created November 30, 2024</div>
-            <h1>R&D Update: Fine-Tuning of v1.5 Model Based on Partner Feedback</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Alpha Test</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">パートナーからのフィードバックに基づき、v1.5モデルを微調整。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">D-WaveがAdvantage2のベンチマーク結果を発表</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+
+III. Alpha TestingPartnersからのフィードバックに基づき、v1.5モデルを微調整 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>III. Alpha TestingパートナーからのFeedbackに基づき、v1.5モデルをFine-tuning</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+Advantage2 ProtoD-WaveがAdvantage2のBenchmark結果をPresented 38 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">D-Wave published benchmark results for Advantage2, confirming the performance improvements we had observed and validating our hardware migration strategy.</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
