--- a/reports/2024-12.html
+++ b/reports/2024-12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>December 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>December 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,59 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created December 31, 2024</div>
+<h1>2024 Summary: Alpha Test Success. 2025 Research &amp; Open Source Plan Formulated</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. Alpha Testing2024年Summary</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">High praise was received from alpha partners, who recognized the value of our optimization approach. Discussions began about transitioning from alpha test relationships to ongoing research partnerships. The successful alpha test phase validated our research direction and demonstrated practical value to network operators.
 
-        <header>
-            <div class="report-date">Created December 31, 2024</div>
-            <h1>2024 Summary: Alpha Test Success. 2025 Research & Open Source Plan Formulated</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Alpha Test</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">2024 summary. Alpha test successful. 2025 research & open source plan formulated. Received positive feedback from partners. Discussed transition to research partnerships.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+アルファテスト成功
+
+[Translation needed: Commercial化（]
+
+
+2025年のCommercial化（GA）計画をPlanning [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>2025年の商用化（GA）計画を策定</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+2025年のCommercial化（GA）計画を策定
+
+Hardware Specifications:
+[Translation needed: Partnersから高評価を獲得]
+
+Hardware Specifications:
+Partnersから高評価を獲得 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>パートナーからHigh evaluationをGained</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
