--- a/reports/2025-01.html
+++ b/reports/2025-01.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>January 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,83 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created January 31, 2025</div>
+<h1>Research Preparation: Development of 'Plugin API v0.9' for LND/CLN</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. GA PreparationLND/CLNのPlugin architecture 14 にCompliantしたAPI（v0.9）のDevelopment Presales（GAAdvance reservation）をStarted Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Development of API (v0.9) compliant with LND/CLN plugin architecture began. This API would enable seamless integration of our optimization engine with existing Lightning Network node software, allowing node operators to use our routing optimizations without major infrastructure changes.
 
-        <header>
-            <div class="report-date">Created January 31, 2025</div>
-            <h1>Research Preparation: Development of 'Plugin API v0.9' for LND/CLN</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research Preparation</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Development of API (v0.9) compliant with LND/CLN plugin architecture.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Started research collaboration discussions.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">LNクライアントのプラグイン議論が活発化</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+GA準備LND/CLNプラグインアーキテクチャ 14 に準拠したAPI（v0
+
+
+IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>IV. GA PreparationLND/CLNのPlugin architecture 14 にCompliantしたAPI（v0.9）のDevelopment</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Research collaboration discussions began. We reached out to additional potential research partners, presenting our alpha test results and proposing expanded collaboration opportunities. The goal was to build a broader research network for validating and improving our optimization technology.
+
+Additional Business Details:
+9）の開発
+
+
+Presales（GA先行予約）をStarted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Presales（GAAdvance reservation）をStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+GA準備LND/
+
+Hardware Specifications:
+IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Lightning Network client developers were actively discussing plugin architectures for pathfinding, creating a receptive environment for our API development approach.
+
+Additional Market Information:
+Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14
+
+
+IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
