--- a/reports/2025-02.html
+++ b/reports/2025-02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>February 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,54 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created February 28, 2025</div>
+<h1>Research Development: Open Source Project 'Pathfinder-Q' Announcement and Research Collaboration Discussions</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. GA Preparation商用ソリューションのBrand nameを「Pathfinder-Q」にDecided マーケティングチームStrengthening Launch eventPreparation Advantage2 Proto</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Brand announcement preparation for Pathfinder-Q began. We positioned it as an open source research project rather than a commercial product, emphasizing our commitment to advancing Lightning Network optimization through open research collaboration.
 
-        <header>
-            <div class="report-date">Created February 28, 2025</div>
-            <h1>Research Development: Open Source Project 'Pathfinder-Q' Announcement and Research Collaboration Discussions</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research Preparation</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Open source project name decided as 'Pathfinder-Q'. Research team expanded. Release event preparation.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Business Details:
+マーケティングチーム増強
+
+
+IV. GA PreparationCommercialソリューションのブランド名を「Pathfinder-Q」に決定 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>マーケティングチームStrengthening</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+ローンチイベント準備
+
+Hardware Specifications:
+IV. GA PreparationCommercialソリューションのブランド名を「Pathfinder-Q」に決定 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Launch eventPreparation</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
