--- a/reports/2025-03.html
+++ b/reports/2025-03.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>March 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>March 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,67 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created March 31, 2025</div>
+<h1>Research Preparation: Pathfinder-Q API v0.9 Complete and Final Testing by Partners</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. GA PreparationPathfinder-Q API v0.9Completed パートナーによるFinal test Advantage2 Proto</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Pathfinder-Q API v0.9 was completed. This version provided core optimization functionality through a plugin-compatible interface, enabling integration with LND and CLN node software. The API was designed to be non-intrusive, working alongside existing routing systems.
 
-        <header>
-            <div class="report-date">Created March 31, 2025</div>
-            <h1>Research Preparation: Pathfinder-Q API v0.9 Complete and Final Testing by Partners</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research Preparation</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Pathfinder-Q API v0.9 completed.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Final testing by partners.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+GA準備Pathfinder-Q API v0
+
+
+IV. GA PreparationPathfinder-Q API v0.9Completion
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>IV. GA PreparationPathfinder-Q API v0.9Completed</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Final testing by research partners began. Partners who had participated in alpha testing were invited to test the v0.9 API, providing feedback on integration, performance, and usability before open source release.
+
+Additional Business Details:
+9完成
+
+
+Partnersによる最終Test [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>パートナーによるFinal test</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+Partnersによる最終テスト
+
+Hardware Specifications:
+IV. GA PreparationPathfinder-Q API v0.9Completion</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
