--- a/reports/2025-05.html
+++ b/reports/2025-05.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>May 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>May 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,80 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created May 31, 2025</div>
+<h1>Hardware GA: Migration to Full Spec D-Wave Advantage2 (20-way Connectivity)</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. GAFull specificationのAdvantage2（4400+Q, 20-way）がGA 9 バックエンドを即時Migration For mediaにGAをAnnouncement 23 Advantage2 GA 9Advantage2 GA 9</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Full-spec Advantage2 (4400+ Qubits, 20-way connectivity) became generally available. Our backend systems were immediately migrated to the new hardware. The improved connectivity was particularly important, as it enabled more efficient embedding of dense Lightning Network graph structures into the quantum annealer.
 
-        <header>
-            <div class="report-date">Created May 31, 2025</div>
-            <h1>Hardware GA: Migration to Full Spec D-Wave Advantage2 (20-way Connectivity)</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research Release</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Full spec Advantage2 (4400+Q, 20-way) GA. Backend migrated immediately.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Announced research release to media.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 GA</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Advantage2 GA</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+GAフルスペックのAdvantage2（4400+Q, 20-way）がGA 9
+
+
+バックエンドを即時移行 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>IV. GAFull specificationのAdvantage2（4400+Q, 20-way）がGA 9</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Research release was announced to media and the Lightning Network community. We positioned Pathfinder-Q as an open source research contribution, emphasizing collaboration and community involvement rather than commercial objectives.
+
+Additional Business Details:
+バックエンドを即時移行
+
+
+メディア向けにGAをPresented 23 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>バックエンドを即時Migration</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 GA
+
+Hardware Specifications:
+メディア向けにGAを発表 23
+
+Hardware Specifications:
+IV. GAフルスペックのAdvantage2（4400+Q, 20-way）がGA 9
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>For mediaにGAをAnnouncement 23</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Advantage2 GA marked a major milestone in quantum computing availability, with improved performance and accessibility for research organizations.
+
+
+Advantage2 GA 9Advantage2 GA 9</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
