--- a/reports/2025-06.html
+++ b/reports/2025-06.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>June 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>June 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,37 +154,51 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created June 30, 2025</div>
+<h1>Technical Milestones：Pathfinder-Q v1.0、20-wayトポロジを活用し問題規模を5倍に拡大</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. GAPathfinder-Q APIをv1.0にUpdated 20-wayTopology 34 をUtilizedし、Problem scaleを5倍にExpanded Advantage2 GA</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Pathfinder-Q API was updated to v1.0, taking advantage of Advantage2's 20-way topology to expand problem scale by 5x. This meant we could now optimize routing for much larger network subgraphs, approaching the scale of entire regional Lightning Network deployments.
 
-        <header>
-            <div class="report-date">Created June 30, 2025</div>
-            <h1>Technical Milestones：Pathfinder-Q v1.0、20-wayトポロジを活用し問題規模を5倍に拡大</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research Release</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Pathfinder-Q APIをv1.0にアップデート。20-wayトポロジを活用し、問題規模を5倍に拡大。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 GA</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+GAPathfinder-Q APIをv1
+
+
+IV. GAPathfinder-Q APIをv1.0にアップデート
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>IV. GAPathfinder-Q APIをv1.0にUpdated</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 GA
+
+Hardware Specifications:
+20-wayトポロジ 34 を活用し、問題規模を5倍に拡大
+
+Hardware Specifications:
+IV. GAPathfinder-Q APIをv1.0にアップデート</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
