--- a/reports/2025-09.html
+++ b/reports/2025-09.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>September 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>September 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,88 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created September 30, 2025</div>
+<h1>Research Release: 'Pathfinder-Q' v1.0 Open Source Release</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. Commercialization「Pathfinder-Q」 API v1.0を商用ローンチ LND/CLNプラグインをSimultaneous release 最初の商用顧客5社がProduction operationStarted Advantage2 GA (Hybrid) 23CLN v25.09リリース 36</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Pathfinder-Q API v1.0 was released as open source. LND and CLN plugins were released simultaneously, making the optimization technology available to the entire Lightning Network community. This open source release represented the culmination of 5 years of research and development.
 
-        <header>
-            <div class="report-date">Created September 30, 2025</div>
-            <h1>Research Release: 'Pathfinder-Q' v1.0 Open Source Release</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research & Open Source</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Pathfinder-Q API v1.0 open source release. LND/CLN plugins released simultaneously.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">First 5 research partners began deployment testing.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 GA (Hybrid)</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">CLN v25.09 released</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+v1.0を
+
+
+IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>IV. Commercialization「Pathfinder-Q」 API v1.0を商用ローンチ</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">First 5 research partners began deployment testing. These partners were early adopters who had participated in alpha testing and were now integrating Pathfinder-Q into their node operations for ongoing research collaboration. The focus remained on research and optimization improvement rather than commercial deployment.
+
+Additional Business Details:
+0をCommercialローンチ
+
+
+IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
+
+<p><strong>Additional Business Details:</strong></p>
+<p>LND/CLNプラグインをSimultaneous release</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 GA (Hybrid)
+
+Hardware Specifications:
+Advantage2 GA (Hybrid) 23
+
+Hardware Specifications:
+Advantage2 GA (Hybrid) 23CLN v25.09Release 36
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>最初の商用顧客5社がProduction operationStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">CLN v25.09 was released, providing updated plugin architecture that supported our integration approach. The Lightning Network ecosystem was ready for advanced optimization tools.
+
+Additional Market Information:
+CLN v25.09リリース 36
+
+CLN v25.09リリース 36
+
+
+LND/CLNPluginを同時Release [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Market Information:</strong></p>
+<p>Advantage2 GA (Hybrid) 23CLN v25.09リリース 36</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
