--- a/reports/2025-10.html
+++ b/reports/2025-10.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>October 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>October 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,66 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created October 31, 2025</div>
+<h1>Research Progress: Research Deployment with Partners and Taproot Assets Beta Implementation</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. CommercializationTaproot Assets 26 マルチアセット・ルーティング（v0.5 beta）のImplementation Case studyのCreatedStarted Additional customers10社とContract Advantage2 GA (Hybrid)</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Taproot Assets multi-asset routing optimization (v0.5 beta) was implemented. This extended Pathfinder-Q to handle routing decisions for multiple asset types, addressing the increased complexity introduced by Taproot Assets protocol. The beta implementation allowed testing with research partners before broader release.
 
-        <header>
-            <div class="report-date">Created October 31, 2025</div>
-            <h1>Research Progress: Research Deployment with Partners and Taproot Assets Beta Implementation</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research & Open Source</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Taproot Assets マルチアセット・ルーティング（v0.5 beta）の実装。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Started creating research collaboration reports. Established partnerships with 10 additional organizations.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 GA (Hybrid)</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+Commercial化Taproot Assets 26 マルチアセット・ルーティング（v0
+
+
+IV. CommercializationTaproot Assets 26 マルチアセット・ルーティング（v0.5 beta）のImplementation</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Research collaboration reports (case studies) creation began. We documented optimization results from research partners, showing routing improvements and performance gains. Additional research partnerships were established with 10 more organizations, expanding our research network for validation and improvement.
+
+Commercial化
+
+
+IV. CommercializationTaproot Assets 26 マルチアセット・ルーティング（v0.5 beta）のImplementation
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Case studyのCreatedStarted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 GA (Hybrid)
+
+Hardware Specifications:
+ケーススタディの作成開始
+
+Hardware Specifications:
+Advantage2 GA (Hybrid)
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Additional customers10社とContract</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
