--- a/reports/2025-12.html
+++ b/reports/2025-12.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>December 2025 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>December 2025 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,84 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created December 31, 2025</div>
+<h1>2025 Summary: Research Collaboration Results - 70% Routing Failure Rate Reduction, 30% Performance Improvement</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">IV. CommercializationPathfinder-Q v1.1（Taproot Assets Beta support）をリリース</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">Pathfinder-Q v1.1 was released with Taproot Assets beta support. This version incorporated feedback from limited beta testing and provided stable multi-asset routing optimization capabilities. The 2026 roadmap for DeFi liquidity optimization was formulated, outlining future research directions beyond Lightning Network.
 
-        <header>
-            <div class="report-date">Created December 31, 2025</div>
-            <h1>2025 Summary: Research Collaboration Results - 70% Routing Failure Rate Reduction, 30% Performance Improvement</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">IV. Research & Open Source</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">Pathfinder-Q v1.1 (Taproot Assets beta support) released.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">2026 roadmap (DeFi liquidity optimization) formulated. Series B funding preparation started.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 GA (Hybrid)</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Responding to increased LN payment traffic during year-end season</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+Commercial化Pathfinder-Q v1
+
+
+2026年Roadmap（DeFi流動性最適化）Planning [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>2026年Roadmap（DeFi流動性最適化）策定</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Research collaboration results from initial partners showed 70% reduction in routing failure rates and 30% performance improvement in capital efficiency. These results were documented in research reports (case studies) that demonstrated the value of our optimization approach. Series B funding preparation began, seeking resources to expand research into DeFi optimization applications.
+
+Additional Business Details:
+Commercial化Pathfinder-Q v1.1（
+
+[Translation needed: Commercial化Pathfinder-Q v1.1（]
+
+
+シリーズBのPreparationStarted</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 GA (Hybrid)
+
+Hardware Specifications:
+Advantage2 GA (Hybrid)Year-end商戦におけるLN決済のTrafficIncreaseにResponseVI. QuantumLightning社 月次レポートタイトル一覧 (2021-2025)以下の表2は、QuantumLightning社が設立から5年間にわたり、投資家やステークホルダー向けに発行した（とされる）月次レポートのタイトル60ヶ月分の一覧です [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 GA (Hybrid)年末商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次Reportタイトル一覧 (2021-2025)以下の表2は、QuantumLightning社が設立から5年間にわたり、Investment家やステークホルダー向けに発行した（とされる）月次Reportのタイトル60ヶ月分の一覧です</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Year-end shopping season brought increased Lightning Network payment traffic, creating real-world stress testing opportunities for routing optimization. The network's growth validated the importance of advanced optimization research.
+
+Additional Market Information:
+年末商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次レポートタイトル一覧 (
+
+[Translation needed: Year-end商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次レポートタイトル一覧 (]
+
+
+このタイトルの変遷は、同社の技術的進捗、市場環境の変化、そして戦略的ナラティブの進化（特に2023年の「AIへのピボット」25 と2024-2025年の「Advantage2」9 によるブレークスルー）を時系列で反映しています [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Market Information:</strong></p>
+<p>このタイトルの変遷は、同社の技術的進捗、市場Environmentの変化、そしてStrategy的Narrativeの進化（特に2023年の「AIへのピボット」25 と2024-2025年の「Advantage2」9 によるブレークスルー）を時系列で反映しています</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
