--- a/reports/2023-01.html
+++ b/reports/2023-01.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>January 2023 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>January 2023 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,51 +154,88 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created January 31, 2023</div>
+<h1>Academic Achievement: Submission of LN-QUBO v1.0 (Full Spec) Paper to Academic Journal</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">I. BenchmarkLN-QUBO v1.0の論文をAcademic journalにSubmitted シリーズAのPreparationFull-scale VCとのInitial接触 Advantage 4.1 23Web3へのVCInvestmentが凍結Started 25</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Technical Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Key Activities</div>
+<div class="milestone-content">A full academic paper on LN-QUBO v1.0 was submitted to a peer-reviewed journal. The paper provided comprehensive documentation of our mathematical model, simulation methodology, and benchmark results. This academic publication would establish our research in the scientific literature.
 
-        <header>
-            <div class="report-date">Created January 31, 2023</div>
-            <h1>Academic Achievement: Submission of LN-QUBO v1.0 (Full Spec) Paper to Academic Journal</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">I. Benchmark</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Technical Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Key Activities</div>
-                <div class="milestone-content">LN-QUBO v1.0の論文を学術誌に投稿。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">シリーズAの準備本格化。VCとの初期接触。</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage 4.1</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">Web3へのVC投資が凍結開始</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+Additional Technical Details:
+BenchmarkLN-QUBO v1
+
+
+I. BenchmarkLN-QUBO v1.0のPaperを学術誌にSubmitted [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. BenchmarkLN-QUBO v1.0の論文をAcademic journalにSubmitted</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">Series A fundraising preparation intensified. Initial contacts were made with venture capital firms, presenting our research progress and future plans. The academic paper submission strengthened our credibility as a serious research organization.
+
+Additional Business Details:
+0のPaperを学術誌に投稿
+
+
+VCとの初期接触 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>シリーズAのPreparationFull-scale</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage 4.1
+
+Hardware Specifications:
+Advantage 4.1 23
+
+Hardware Specifications:
+Advantage 4.1 23Web3へのVC投資が凍結Started 25 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Hardware Specifications:</strong></p>
+<p>VCとのInitial接触</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">VC investment in Web3 and blockchain sectors began to freeze, creating challenging fundraising conditions. Investors became more selective, focusing on companies with clear paths to commercialization.
+
+Additional Market Information:
+Web3へのVC投資が凍結開始 25
+
+[Translation needed: Web3へのVC投資が凍結開始 25]
+
+
+Advantage 4.1 23Web3へのVC投資が凍結Started 25 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Market Information:</strong></p>
+<p>Advantage 4.1 23Web3へのVCInvestmentが凍結Started 25</p></div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
