--- a/reports/2024-07.html
+++ b/reports/2024-07.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>July 2024 Report - QuantumLightning</title>
-    <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>July 2024 Report - QuantumLightning</title>
+<style>
         * {
             margin: 0;
             padding: 0;
@@ -153,44 +154,60 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <a href="../index.html" class="back-link">← Back to Report List</a>
+<div class="container">
+<a class="back-link" href="../index.html">← Back to Report List</a>
+<header>
+<div class="report-date">Created July 31, 2024</div>
+<h1>Business Milestones：大手LSP 3社とアルファテスト契約を締結</h1>
+</header>
+<div class="content-section">
+<h2 class="section-title">Phase</h2>
+<div class="milestone-item">
+<div class="milestone-label">Current Phase</div>
+<div class="milestone-content">III. Alpha TestingMajor LSP 3社とアルファテストContractをSigned Advantage2 ProtoLNが成熟し、大手取引所がHired 13</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Business Milestones</h2>
+<div class="milestone-item">
+<div class="milestone-label">Business Activities</div>
+<div class="milestone-content">The alpha test contracts marked a major milestone in transitioning from simulation-based research to real-world validation. These partnerships provided credibility and demonstrated market interest in our optimization approach.
 
-        <header>
-            <div class="report-date">Created July 31, 2024</div>
-            <h1>Business Milestones：大手LSP 3社とアルファテスト契約を締結</h1>
-        </header>
-        <div class="content-section">
-            <h2 class="section-title">Phase</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Current Phase</div>
-                <div class="milestone-content">III. Alpha Test</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Business Milestones</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Business Activities</div>
-                <div class="milestone-content">Established alpha test research partnerships with 3 major LSPs.</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Quantum Annealing Hardware</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Hardware Used</div>
-                <div class="milestone-content">Advantage2 Proto</div>
-            </div>
-        </div>
-        <div class="content-section">
-            <h2 class="section-title">Market Context</h2>
-            <div class="milestone-item">
-                <div class="milestone-label">Market Environment</div>
-                <div class="milestone-content">LNが成熟し、大手取引所が採用</div>
-            </div>
-        </div>
-        <footer class="footer">
-            <p>&copy; 2025 QuantumLightning. All rights reserved.</p>
-        </footer>
-    </div>
+
+III. Alpha Testing大手LSP 3 companiesとAlphaTestContractを締結 [Note: Some Japanese text may need manual translation]
+
+<p><strong>Additional Business Details:</strong></p>
+<p>Advantage2 ProtoLNが成熟し、大手取引所がHired 13</p></div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Quantum Annealing Hardware</h2>
+<div class="milestone-item">
+<div class="milestone-label">Hardware Used</div>
+<div class="milestone-content">Advantage2 Proto
+
+Hardware Specifications:
+Advantage2 ProtoLNMaturationし、大手取引所がAdoption 13 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<div class="content-section">
+<h2 class="section-title">Market Context</h2>
+<div class="milestone-item">
+<div class="milestone-label">Market Environment</div>
+<div class="milestone-content">Lightning Network had matured significantly, with major exchanges adopting LN for payment processing. These large-scale deployments faced real routing optimization challenges, creating natural partnership opportunities.
+
+Additional Market Information:
+LNが成熟し、大手取引所が採用 13
+
+[Translation needed: LN成熟し、大手取引所が採用 13]
+
+
+Advantage2 ProtoLNMaturationし、大手取引所がAdoption 13 [Note: Some Japanese text may need manual translation]</div>
+</div>
+</div>
+<footer class="footer">
+<p>© 2025 QuantumLightning. All rights reserved.</p>
+</footer>
+</div>
 </body>
 </html>
